app/stylesheets/admin/show_referrers.sass
body.application.admin.show_referrers
  #referral_sources
    text-align: center

  table
    border-width: 1px
    border-style: solid
    border-color: #000000
    border-collapse: collapse
    margin-left: auto
    margin-right: auto

  th, td
    border-width: 1px
    border-style: solid
    border-color: #000000
    text-align: center

  th
    font-weight: bold

  h1
    margin: 20px auto
    font-size: 28px
    color: $cpBlue

